# HealthcareAssistant

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json
apps/api/: .env.example  pyproject.toml
apps/api/app/: config.py  db.py  dependencies.py  main.py
apps/api/app/llm/: alert_writer.py  chat_service.py  client.py  prompts.py
apps/api/app/models/: __init__.py  alerts.py  analysis.py  apple_health.py  chat.py  clinical.py  daily_tracking.py  health_records.py  medical.py  reproductive.py  user.py
apps/api/app/routers/: __init__.py  alerts.py  apple_health.py  chat.py  clinical.py  health_records.py  monitor.py  stats.py  users.py
apps/api/app/schemas/: __init__.py  alerts.py  analysis.py  chat.py  clinical.py  daily_tracking.py  health_records.py  medical.py  reproductive.py  user.py
apps/api/app/services/: accounts.py  analysis.py  analysis_generation.py  analysis_service.py  apple_health_parser.py  apple_health_sync_service.py  clinical_history.py  met.py  monitor.py  monitor_types.py  stats.py
apps/api/scripts/: migrate_alerts_add_severity.py
apps/api/tests/: test_alerts_api.py  test_analysis_generation.py  test_analysis_service.py  test_met.py  test_monitor_checks.py  test_monitor_service.py
apps/web/: package-lock.json  package.json
apps/web/src/: proxy.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/(app)/: layout.tsx
apps/web/src/hooks/: useAlerts.ts  useAuthGuard.ts
apps/web/src/lib/: api.ts  apiClient.ts  auth.ts
apps/web/src/types/: chat.ts  health.ts  stats.ts  user.ts
docs/: SETUP.md
(+14 files in other folders)
